fix(card): Fixed collapsing issue on slds-card__header (#3634)
* fix(card): Fixed collapsing issue when slds-assistive-text is applied to slds-header

* fix(card): Removed <Example /> from docblocks to prevent duplicate VRT refs

* fix(card): Clean up docs.mdx

* fix(card): Add examples to docblocks

--- a/ui/components/cards/base/_index.scss
+++ b/ui/components/cards/base/_index.scss
@@ -72,6 +72,7 @@
  * @restrict .slds-card div
  */
 .slds-card__body {
+  margin-top: $var-spacing-vertical-small;
   margin-bottom: $var-spacing-vertical-small;
 }
 
